@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-09T01:18:18Z",
+  "timestamp" : "2023-11-09T08:21:48Z",
   "count_outdated" : 597,
   "uniques_outdated" : 282,
-  "count" : 632,
-  "uniques" : 297,
+  "count" : 633,
+  "uniques" : 298,
   "clones" : [
     {
       "timestamp": "2023-10-26T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
