@@ -1,3 +1,12 @@
+2023-11-09T08:21:48Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6809151364 # 941
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-09
+* notice: last 14d: unq all: 2 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 282 597 / 297 632
+* notice: next accum: outdated-unq outdated-all / unq all: 282 597 / 298 633
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-11-09]
+
 2023-11-09T01:18:18Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6806112557 # 940
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-09
